--- a/index.html
+++ b/index.html
@@ -12,7 +12,29 @@
         <![endif]-->
     </head>
     <body>
-        
+        <div class="container">
+            <nav class="navigation"></nav>
+            <div class="game-container">
+                <div class="rows">
+                    <div class="cards"><img></div>
+                    <div class="cards"><img></div>
+                    <div class="cards"><img></div>
+                    <div class="cards"><img></div>
+                </div>
+                <div class="rows">
+                    <div class="cards"><img></div>
+                    <div class="cards"><img></div>
+                    <div class="cards"><img></div>
+                    <div class="cards"><img></div>
+                </div>
+                <div class="rows">
+                    <div class="cards"><img></div>
+                    <div class="cards"><img></div>
+                    <div class="cards"><img></div>
+                    <div class="cards"><img></div>
+                </div>
+            </div>
+        </div>
 
         <script src="js/index.js"></script>
     </body>
