--- a/index.html
+++ b/index.html
@@ -15,27 +15,22 @@
         <div class="container">
             <nav class="navigation"></nav>
             <div class="game-container">
-                <div class="rows">
-                    <div class="cards"><img></div>
-                    <div class="cards"><img></div>
-                    <div class="cards"><img></div>
-                    <div class="cards"><img></div>
-                </div>
-                <div class="rows">
-                    <div class="cards"><img></div>
-                    <div class="cards"><img></div>
-                    <div class="cards"><img></div>
-                    <div class="cards"><img></div>
-                </div>
-                <div class="rows">
-                    <div class="cards"><img></div>
-                    <div class="cards"><img></div>
-                    <div class="cards"><img></div>
-                    <div class="cards"><img></div>
-                </div>
+                    <div class="pair1 cards"><img></div>
+                    <div class="pair1 cards"><img></div>
+                    <div class="pair2 cards"><img></div>
+                    <div class="pair2 cards"><img></div>
+                    <div class="pair3 cards"><img></div>
+                    <div class="pair3 cards"><img></div>
+                    <div class="pair4 cards"><img></div>
+                    <div class="pair4 cards"><img></div>
+                    <div class="pair5 cards"><img></div>
+                    <div class="pair5 cards"><img></div>
+                    <div class="pair6 cards"><img></div>
+                    <div class="pair6 cards"><img></div>
             </div>
         </div>
 
+        <script src="js/jquery-3.2.1.min.js"></script>
         <script src="js/index.js"></script>
     </body>
 </html>
