--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <body>
         <div class="container">
             <nav class="navigation"></nav>
+            <div class="scoreboard">
+                <div class="player1">
+                    <h4>Player 1 Score</h4>
+                    <p>0</p>
+                </div>
+            </div>
             <div class="game-container">
                     <div class="pair1 cards"><img></div>
                     <div class="pair1 cards"><img></div>
@@ -27,6 +33,12 @@
                     <div class="pair5 cards"><img></div>
                     <div class="pair6 cards"><img></div>
                     <div class="pair6 cards"><img></div>
+            </div>
+            <div class="scoreboard">
+                <div class="player2">
+                    <h4>Player 2 Score</h4>
+                    <p>0</p>
+                </div>
             </div>
         </div>
 
