--- a/index.html
+++ b/index.html
@@ -14,10 +14,18 @@
     <body>
         <div class="container">
             <nav class="navigation"></nav>
-            <div class="scoreboard">
-                <div class="player1">
-                    <h4>Player 1 Score</h4>
-                    <p>0</p>
+            <div class="scoreboard-container">
+                <div class="scoreboard">
+                    <div class="player1">
+                        <h4>Player 1 Score</h4>
+                        <p>0</p>
+                    </div>
+                </div>
+                <div class="scoreboard">
+                    <div class="player2">
+                        <h4>Player 2 Score</h4>
+                        <p>0</p>
+                    </div>
                 </div>
             </div>
             <div class="game-container">
@@ -33,12 +41,6 @@
                     <div class="pair5 cards"><img></div>
                     <div class="pair6 cards"><img></div>
                     <div class="pair6 cards"><img></div>
-            </div>
-            <div class="scoreboard">
-                <div class="player2">
-                    <h4>Player 2 Score</h4>
-                    <p>0</p>
-                </div>
             </div>
         </div>
 
