Cards generating dynamicly + cards background image added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
             <div class="game-container">
-                    <div class="pair1 cards"><img></div>
+                    <!--<div class="pair1 cards"><img></div>
                     <div class="pair1 cards"><img></div>
                     <div class="pair2 cards"><img></div>
                     <div class="pair2 cards"><img></div>
@@ -40,7 +40,7 @@
                     <div class="pair5 cards"><img></div>
                     <div class="pair5 cards"><img></div>
                     <div class="pair6 cards"><img></div>
-                    <div class="pair6 cards"><img></div>
+                    <div class="pair6 cards"><img></div>-->
             </div>
         </div>
 
