Added game logic

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Memory Game</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700" rel="stylesheet">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/index.css">
 
@@ -29,18 +30,18 @@
                 </div>
             </div>
             <div class="game-container">
-                    <!--<div class="pair1 cards"><img></div>
-                    <div class="pair1 cards"><img></div>
-                    <div class="pair2 cards"><img></div>
-                    <div class="pair2 cards"><img></div>
-                    <div class="pair3 cards"><img></div>
-                    <div class="pair3 cards"><img></div>
-                    <div class="pair4 cards"><img></div>
-                    <div class="pair4 cards"><img></div>
-                    <div class="pair5 cards"><img></div>
-                    <div class="pair5 cards"><img></div>
-                    <div class="pair6 cards"><img></div>
-                    <div class="pair6 cards"><img></div>-->
+                <!--<div class="pair1 cards"><img></div>
+                <div class="pair1 cards"><img></div>
+                <div class="pair2 cards"><img></div>
+                <div class="pair2 cards"><img></div>
+                <div class="pair3 cards"><img></div>
+                <div class="pair3 cards"><img></div>
+                <div class="pair4 cards"><img></div>
+                <div class="pair4 cards"><img></div>
+                <div class="pair5 cards"><img></div>
+                <div class="pair5 cards"><img></div>
+                <div class="pair6 cards"><img></div>
+                <div class="pair6 cards"><img></div>-->
             </div>
         </div>
 
