--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <![endif]-->
     </head>
     <body>
+       <!-- test commit since I dont know how branches work XD -->
         <div class="container">
             <nav class="navigation"></nav>
             <div class="scoreboard-container">
