Deleted redundant images, deleted game logic, deleted jquery. Cards displaying in html for now. Switching to Vue.js

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
             <div class="game-container">
-                <!--<div class="pair1 cards"><img></div>
+                <div class="pair1 cards"><img></div>
                 <div class="pair1 cards"><img></div>
                 <div class="pair2 cards"><img></div>
                 <div class="pair2 cards"><img></div>
@@ -43,11 +43,11 @@
                 <div class="pair5 cards"><img></div>
                 <div class="pair5 cards"><img></div>
                 <div class="pair6 cards"><img></div>
-                <div class="pair6 cards"><img></div>-->
+                <div class="pair6 cards"><img></div>
             </div>
         </div>
 
-        <script src="js/jquery-3.2.1.min.js"></script>
+        <script src="https://unpkg.com/vue"></script>
         <script src="js/index.js"></script>
     </body>
 </html>
