Started over the game logic. Using jQuery, game board generates properly now.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700" rel="stylesheet">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="css/media-queries.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700" rel="stylesheet">
 
         <!--[if lt IE 9]>
@@ -31,23 +32,14 @@
                     </div>
                 </div>
             </div>
-            <div class="game-container">
-                <div class="pair1 cards"><img></div>
-                <div class="pair1 cards"><img></div>
-                <div class="pair2 cards"><img></div>
-                <div class="pair2 cards"><img></div>
-                <div class="pair3 cards"><img></div>
-                <div class="pair3 cards"><img></div>
-                <div class="pair4 cards"><img></div>
-                <div class="pair4 cards"><img></div>
-                <div class="pair5 cards"><img></div>
-                <div class="pair5 cards"><img></div>
-                <div class="pair6 cards"><img></div>
-                <div class="pair6 cards"><img></div>
+            <div class="game-container" id="game">
+                
             </div>
         </div>
-
-        <script src="https://unpkg.com/vue"></script>
+        <script
+  src="https://code.jquery.com/jquery-3.2.1.js"
+  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+  crossorigin="anonymous"></script>
         <script src="js/index.js"></script>
     </body>
 </html>
